--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
           <div class="col-md-12">
             <div class="section-heading">
               <h2>Special</h2>
-              <a href="products.html">View all service <i class="fa fa-angle-right"></i></a>
+              <a href="products.html">View all services <i class="fa fa-angle-right"></i></a>
             </div>
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/specialties/spoil-u-nails-image-1.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/specialties/spoil-u-nails-image-12.jpg" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4></h4></a>
                 <h6></h6>
@@ -126,7 +126,7 @@
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/specialties/spoil-u-nails-image-2.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/specialties/spoil-u-nails-image-11.jpg" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4></h4></a>
                 <h6></h6>
@@ -144,7 +144,7 @@
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/specialties/spoil-u-nails-image-3.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/specialties/spoil-u-nails-image-10.jpg" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4></h4></a>
                 <h6></h6>
@@ -162,7 +162,7 @@
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/specialties/spoil-u-nails-image-4.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/specialties/spoil-u-nails-image-9.jpg" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4></h4></a>
                 <h6></h6>
@@ -180,7 +180,7 @@
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/specialties/spoil-u-nails-image-5.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/specialties/spoil-u-nails-image-8.jpg" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4></h4></a>
                 <h6></h6>
@@ -198,7 +198,7 @@
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/specialties/spoil-u-nails-image-6.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/specialties/spoil-u-nails-image-7.jpg" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4></h4></a>
                 <h6></h6>
@@ -229,7 +229,7 @@
           <div class="col-md-6">
             <div class="left-content">
               <h4>Event Promotion This Month </h4>
-              <p><a rel="nofollow" href="https://www.lldtek.com" target="_parent">Spoil U Nails </a> have 10% off Monday to Thursday from 9:00 AM - 11:00 AM</p>
+              <p><a rel="nofollow" href="" target="_parent">Spoil U Nails </a> have 10% off Monday to Thursday from 9:00 AM - 11:00 AM</p>
               <ul class="featured-list">
                 <li><a><span class="left-column-day">Mon: </span> 9:00 am - 7:30 pm</a></li>
                 <li><a><span class="left-column-day">Tue: </span> 9:00 am - 7:30 pm</a></li>
