--- a/index.html
+++ b/index.html
@@ -108,6 +108,60 @@
           </div>
           <div class="col-md-4">
             <div class="product-item">
+              <a href="#"><img src="assets/images/specialties/spoil-u-nails-image-30.jpg" alt=""></a>
+              <div class="down-content">
+                <a href="#"><h4></h4></a>
+                <h6></h6>
+                <p></p>
+                <ul class="stars">
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                </ul>
+                <span></span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="product-item">
+              <a href="#"><img src="assets/images/specialties/spoil-u-nails-image-28.jpg" alt=""></a>
+              <div class="down-content">
+                <a href="#"><h4></h4></a>
+                <h6></h6>
+                <p></p>
+                <ul class="stars">
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                </ul>
+                <span></span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="product-item">
+              <a href="#"><img src="assets/images/specialties/spoil-u-nails-image-24.jpg" alt=""></a>
+              <div class="down-content">
+                <a href="#"><h4></h4></a>
+                <h6></h6>
+                <p></p>
+                <ul class="stars">
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                </ul>
+                <span></span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="product-item">
               <a href="#"><img src="assets/images/specialties/spoil-u-nails-image-12.jpg" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4></h4></a>
@@ -160,60 +214,60 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="product-item">
-              <a href="#"><img src="assets/images/specialties/spoil-u-nails-image-9.jpg" alt=""></a>
-              <div class="down-content">
-                <a href="#"><h4></h4></a>
-                <h6></h6>
-                <p></p>
-                <ul class="stars">
-                  <li><i class="fa fa-star"></i></li>
-                  <li><i class="fa fa-star"></i></li>
-                  <li><i class="fa fa-star"></i></li>
-                  <li><i class="fa fa-star"></i></li>
-                  <li><i class="fa fa-star"></i></li>
-                </ul>
-                <span></span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="product-item">
-              <a href="#"><img src="assets/images/specialties/spoil-u-nails-image-8.jpg" alt=""></a>
-              <div class="down-content">
-                <a href="#"><h4></h4></a>
-                <h6></h6>
-                <p></p>
-                <ul class="stars">
-                  <li><i class="fa fa-star"></i></li>
-                  <li><i class="fa fa-star"></i></li>
-                  <li><i class="fa fa-star"></i></li>
-                  <li><i class="fa fa-star"></i></li>
-                  <li><i class="fa fa-star"></i></li>
-                </ul>
-                <span></span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="product-item">
-              <a href="#"><img src="assets/images/specialties/spoil-u-nails-image-7.jpg" alt=""></a>
-              <div class="down-content">
-                <a href="#"><h4></h4></a>
-                <h6></h6>
-                <p></p>
-                <ul class="stars">
-                  <li><i class="fa fa-star"></i></li>
-                  <li><i class="fa fa-star"></i></li>
-                  <li><i class="fa fa-star"></i></li>
-                  <li><i class="fa fa-star"></i></li>
-                  <li><i class="fa fa-star"></i></li>
-                </ul>
-                <span></span>
-              </div>
-            </div>
-          </div>
+          <!--<div class="col-md-4">-->
+            <!--<div class="product-item">-->
+              <!--<a href="#"><img src="assets/images/specialties/spoil-u-nails-image-9.jpg" alt=""></a>-->
+              <!--<div class="down-content">-->
+                <!--<a href="#"><h4></h4></a>-->
+                <!--<h6></h6>-->
+                <!--<p></p>-->
+                <!--<ul class="stars">-->
+                  <!--<li><i class="fa fa-star"></i></li>-->
+                  <!--<li><i class="fa fa-star"></i></li>-->
+                  <!--<li><i class="fa fa-star"></i></li>-->
+                  <!--<li><i class="fa fa-star"></i></li>-->
+                  <!--<li><i class="fa fa-star"></i></li>-->
+                <!--</ul>-->
+                <!--<span></span>-->
+              <!--</div>-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="col-md-4">-->
+            <!--<div class="product-item">-->
+              <!--<a href="#"><img src="assets/images/specialties/spoil-u-nails-image-8.jpg" alt=""></a>-->
+              <!--<div class="down-content">-->
+                <!--<a href="#"><h4></h4></a>-->
+                <!--<h6></h6>-->
+                <!--<p></p>-->
+                <!--<ul class="stars">-->
+                  <!--<li><i class="fa fa-star"></i></li>-->
+                  <!--<li><i class="fa fa-star"></i></li>-->
+                  <!--<li><i class="fa fa-star"></i></li>-->
+                  <!--<li><i class="fa fa-star"></i></li>-->
+                  <!--<li><i class="fa fa-star"></i></li>-->
+                <!--</ul>-->
+                <!--<span></span>-->
+              <!--</div>-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="col-md-4">-->
+            <!--<div class="product-item">-->
+              <!--<a href="#"><img src="assets/images/specialties/spoil-u-nails-image-7.jpg" alt=""></a>-->
+              <!--<div class="down-content">-->
+                <!--<a href="#"><h4></h4></a>-->
+                <!--<h6></h6>-->
+                <!--<p></p>-->
+                <!--<ul class="stars">-->
+                  <!--<li><i class="fa fa-star"></i></li>-->
+                  <!--<li><i class="fa fa-star"></i></li>-->
+                  <!--<li><i class="fa fa-star"></i></li>-->
+                  <!--<li><i class="fa fa-star"></i></li>-->
+                  <!--<li><i class="fa fa-star"></i></li>-->
+                <!--</ul>-->
+                <!--<span></span>-->
+              <!--</div>-->
+            <!--</div>-->
+          <!--</div>-->
         </div>
       </div>
     </div>
